# fastapi_financial_manager

./: .env  .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  s  test.db
alembic/: env.py
alembic/versions/: 1b45f0f2584b_autogenerate_migration.py  bbceaa18501a_fix_model_inconsistencies_in_user_and_.py  d519e0d2e7d1_added_autoincrements_to_ids.py  f08399183feb_create_all_tables.py
backend/: .env  .gitignore  pyproject.toml
backend/src/: dependencies.py  main.py
backend/src/config/: database.py
backend/src/models/: categories_model.py  expenses_model.py  history_model.py  incomes_model.py  (+1 more)
src/: dependencies.py  main.py  middleware.py  tasks.py
src/config/: database.py  settings.py
src/exceptions/: http_errors.py
src/models/: __init__.py  categories_model.py  expenses_model.py  history_model.py  incomes_model.py  password_reset_token_model.py  token_blacklist_model.py  token_denylist_model.py  user_model.py
src/routers/: auth.py  balance.py  categories.py  exchange.py  expenses.py  incomes.py  user.py  user_balance.py
src/schemas/: categories_schema.py  expenses_schema.py  history_schema.py  incomes_schema.py  token_schema.py  user_schema.py
src/services/: auth_services.py  balance_services.py  categories_services.py  exchange_services.py  expenses_service.py  expenses_services.py  history_services.py  income_services.py  incomes_services.py  password_services.py  user_services.py
src/tests/: conftest.py  test_auth.py  test_categories.py  test_expenses.py  test_history.py  test_incomes.py  test_user.py  test_user_balance.py
(+5 files in other folders)
